Fix broken styles on alza.cz/beauty products

--- a/src/inject.css
+++ b/src/inject.css
@@ -60,11 +60,11 @@
 }
 
 .HeurekaBox__ProductName {
-  font-family: Arial;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 18px;
+  font-family: Arial !important;
+  font-style: normal !important;
+  font-weight: bold !important;
+  font-size: 16px !important;
+  line-height: 18px !important;
 
   color: #000;
   margin: 0 0 8px 0;
